@@ -12,8 +12,10 @@ nephthys (1.3)
   * feature, auto-suggest for multiple receivers (#69)
   * feature, deny user-password-change flag (#71)
   * feature, confirmation dialog is now shown after clicking "notify" (#49)
+  * feature, permit input-format "fullname <email-address" as receiver
+       address, to be auto-inserted into the address-book (#83)
 
- -- Andreas Unterkircher <unki@netshadow.at>  Sat, 5 Oct 2008 09:57:22 +0200
+ -- Andreas Unterkircher <unki@netshadow.at>  Sat, 8 Oct 2008 09:57:22 +0200
 
 nephthys (1.2)
 
